test/invalid_tag_closed_outside_parent.spt
R"*(
<HTML>
  <DIV> 
    Tag closed outside parent
    <STRONG>
  </DIV>
  </STRONG>
</HTML>
)*"_html; 